--- a/phpmyadmin-standalone/roles/bootstrap/tasks/bootstrap.yml
+++ b/phpmyadmin-standalone/roles/bootstrap/tasks/bootstrap.yml
@@ -3,6 +3,7 @@
   sacloud_router:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     band_width_mbps: 100
     network_mask_len: 28
     name: router for phpmyadmin
@@ -12,6 +13,7 @@
   sacloud_server:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     name: ubuntu14.04_LTS
     cpu: 2
     mem: 2
@@ -26,6 +28,7 @@
   sacloud_disk:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     archive_resource_id: "{{ lookup('env', 'ARCHIVE_RESOURCE_ID') }}"
     plan: ssd
     size_gib: 20
@@ -41,6 +44,7 @@
   sacloud_disk:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     server_resource_id: "{{ sacloud_server_resource_id }}"
     disk_resource_id: "{{ sacloud_disk_resource_id }}"
     state: connected
@@ -49,6 +53,7 @@
   sacloud_router:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     router_resource_id: "{{ sacloud_router_resource_id }}"
     server_resource_id: "{{ sacloud_server_resource_id }}"
     state: connected
@@ -57,5 +62,6 @@
   sacloud_server:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     server_resource_id: "{{ sacloud_server_resource_id }}"
     state: running
