--- a/wordpress-nginx/roles/bootstrap/tasks/bootstrap.yml
+++ b/wordpress-nginx/roles/bootstrap/tasks/bootstrap.yml
@@ -3,6 +3,7 @@
   sacloud_router:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     name: the router
     band_width_mbps: 100
     network_mask_len: 28
@@ -14,6 +15,7 @@
   sacloud_server:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     name: "{{ item }}.example.com"
     cpu: 2
     mem: 2
@@ -32,6 +34,7 @@
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
     archive_resource_id: "{{ lookup('env', 'ARCHIVE_RESOURCE_ID') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     name: "{{ item.0 }} disk"
     icon: Ubuntu
     plan: ssd
@@ -56,6 +59,7 @@
   sacloud_disk:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     disk_resource_id: "{{ item.0.ansible_facts.sacloud_disk_resource_id }}"
     server_resource_id: "{{ item.1.ansible_facts.sacloud_server_resource_id }}"
     state: connected
@@ -67,6 +71,7 @@
   sacloud_router:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     router_resource_id: "{{ sacloud_router_resource_id }}"
     server_resource_id: "{{ item.ansible_facts.sacloud_server_resource_id }}"
     state: connected
@@ -77,6 +82,7 @@
   sacloud_server:
     access_token: "{{ lookup('env', 'ACCESS_TOKEN') }}"
     access_token_secret: "{{ lookup('env', 'ACCESS_TOKEN_SECRET') }}"
+    zone: "{{ lookup('env', 'ZONE') }}"
     server_resource_id: "{{ item.ansible_facts.sacloud_server_resource_id }}"
     state: running
   with_items:
